removed some comments

--- a/views/new_listing.ejs
+++ b/views/new_listing.ejs
@@ -22,7 +22,7 @@
       </div>
       <table class="new-product-form">
         <tbody>
-          <form class="form-inline" action="/products/new" method="POST">
+          <form class="form-inline" method="POST" action="/products/new" >
             <tr class="input-field">
               <td><label for="title">Product Title *:</label></td>
               <td><input class="form-control" type="text" name="title"></td>
