--- a/views/products.ejs
+++ b/views/products.ejs
@@ -21,19 +21,14 @@
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <!-- End of CSS links -->
-
-
-
 </head>
 <!-- Start of body -->
 
 <body>
   <!-- Start of Header -->
   <header id="page-header">
-
     <%- include('./partials/_navbar') %>
-      <div class="tagline"><text>BUY, SELL, WIN.</text></div>
-
+    <div class="tagline"><text>BUY, SELL, WIN.</text></div>
   </header>
   <div class="filter-by-price">
     <form method="post" action="/products">
@@ -101,7 +96,7 @@
   </div>
   <!-- Start of Footer -->
   <footer class="footer">
-    <!-- <%- include('./partials/_footer'); %> -->
+    <%- include('./partials/_footer'); %>
   </footer>
   <!-- End of Footer -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
