--- a/views/single_product.ejs
+++ b/views/single_product.ejs
@@ -29,11 +29,19 @@
   <!-- Start of Header -->
   <header>
     <%- include('./partials/_navbar'); %>
-
   </header>
   <div class="single-product" >
-    <div class="product-image-single">
-      <img src="<%= product.img_url %>" alt="<%= product.title %>" />
+    <div class="image-holder">
+      <% if (product.sold === true ) { %>
+        <div class="featured-tag stack-top">
+          <h3><i class="fas fa-star"></i> SOLD!</h3>
+        </div>
+      <% } else { %>
+          <div class="empty-featured-tag"></div>
+      <% } %>
+          <div class="product-image-single">
+            <img src="<%= product.img_url %>" alt="<%= product.title %>" />
+          </div>
     </div>
     <div class="product-details-single">
       <h2 class="product-title-single">
@@ -43,9 +51,7 @@
         <h3 class="product-price-single">
           $<%= ((product.price) / 100).toFixed(2) %>
         </h3>
-
         <span class="product-buttons" id="adm-pdt_<%=product.single_product_id%>">
-
           <% if (userName === "admin") { %>
             <a href="/messages/<%=user_id %>/<%=product.single_product_id %>">
               <button id="message-seller" class="contact seller">Contact seller</button>
